--- a/themes/agora/assets/sass/styles.scss
+++ b/themes/agora/assets/sass/styles.scss
@@ -3,8 +3,14 @@
 @import 'colors';
 
 @import 'header';
+@import 'list';
 
 body {
     background: lighten($primary, 41%);
     color: $foreground;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
 }
