--- a/themes/agora/assets/sass/list.scss
+++ b/themes/agora/assets/sass/list.scss
@@ -14,6 +14,7 @@ article.summary {
         font-family: 'Suez One', serif;
         font-size: 1.5em;
         padding: 0.5em;
+        line-height: 100%;
 
         // Skew
         background: $primary;
@@ -30,12 +31,25 @@ article.summary {
     }
 
     .picture {
-        min-height: 100px;
-        padding: 0;
+        height: 0;
+        padding: 56.25% 0 0 0;
+        position: relative;
+        margin: 0 0 1em 0;
     }
 
     img {
         width: 100%;
+        height: 100%;
+        object-fit: cover;
         z-index: 0;
+        position: absolute;
+        top: 0;
+    }
+}
+
+@media only screen and (min-width: 640px) {
+    article.summary {
+        border: 3px solid $primary;
+        width: 45%;
     }
 }
