--- a/themes/agora/layouts/_default/summary.html
+++ b/themes/agora/layouts/_default/summary.html
@@ -1,11 +1,12 @@
 <article class="summary">
 	<h1><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
 	<div class="picture">
-	{{ with .Resources }}
-		{{ with .GetMatch "{cover.*,*.jpg,*.png,*.jpeg}" }}
-			<img src="{{ .Permalink }}"/>
+		{{ $img := .Resources.GetMatch "{cover.*,*.jpg,*.png,*.jpeg}" }}
+		{{ if $img }}
+			<img src="{{ $img.Permalink }}"/>
+		{{ else }}
+			<img src="/imgs/missing-image.png"/>
 		{{ end }}
-	{{ end }}
 	</div>
 	<div>
 		Scritto il <time>{{ .Date.Format "02.01.2006" }}</time>
