--- a/themes/agora/assets/sass/list.scss
+++ b/themes/agora/assets/sass/list.scss
@@ -1,42 +1,46 @@
-article.summary {
-    margin: 0.5em 0;
-    position: relative;
-
-    div {
-        padding: 0 0.5em;
+.permalink:link,
+.permalink:visited {
+    display: flex;
+    text-decoration: none;
+    color: $foreground;
+    .info,
+    .text {
+        padding: 0 1em;
     }
-
-    h1 {
-        position: absolute;
-        top: 0;
-        width: 100%;
-        z-index: 1;
-        font-family: 'Suez One', serif;
-        font-size: 1.5em;
-        padding: 0.5em;
-        line-height: 100%;
-
-        // Skew
-        background: $primary;
-        transform: skewY(-4deg);
-        transform-origin: top left;
-
-        a:link,
-        a:visited {
+    .info {
+        font-style: italic;
+        font-size: smaller;
+        text-align: right;
+    }
+    article.summary {
+        margin: 0.5em 0;
+        position: relative;
+        h1 {
+            position: absolute;
+            top: 0;
+            width: 100%;
+            z-index: 1;
+            font-family: 'Suez One', serif;
+            font-size: 1.5em;
+            line-height: 100%;
+            background: $primary;
             color: $background;
             text-decoration: none;
             font-weight: normal;
-            // -webkit-text-stroke: 0.04em $background;
+            padding: 0.5em;
+            margin: 0.3em 0;
+            // Skew
+            transform: skewY(-4deg);
+            transform-origin: top left;
+            transition: ease-out 0.3s;
         }
     }
-
     .picture {
         height: 0;
         padding: 56.25% 0 0 0;
         position: relative;
-        margin: 0 0 1em 0;
+        margin: 0 0 0.3em 0;
     }
-
     img {
         width: 100%;
         height: 100%;
@@ -47,9 +51,34 @@ article.summary {
     }
 }
 
-@media only screen and (min-width: 640px) {
+.permalink:hover {
     article.summary {
-        border: 3px solid $primary;
+        h1 {
+            background: $secondary;
+        }
+    }
+}
+
+@media only screen and (min-width: 640px) {
+    .permalink:link,
+    .permalink:visited {
         width: 45%;
+        article.summary {
+            border: 3px solid $primary;
+            transition: ease-out 0.3s;
+
+            h1 {
+                padding: 0.75em;
+                width: 80%;
+                font-size: 1.8em;
+                margin-top: 0;
+            }
+        }
+    }
+
+    .permalink:hover {
+        article.summary {
+            border: 3px solid $secondary;
+        }
     }
 }
