template mobile for article

--- a/themes/agora/assets/sass/_colors.scss
+++ b/themes/agora/assets/sass/_colors.scss
@@ -1,5 +1,5 @@
 $primary: #454ADE;
 $secondary: #8D3AF3;
 $foreground: #272727;
-$background: #F6E8EA;
+$background: lighten($primary, 41%);
 $accent: #EE4266;
