--- a/themes/agora/assets/sass/styles.scss
+++ b/themes/agora/assets/sass/styles.scss
@@ -4,9 +4,10 @@
 
 @import 'header';
 @import 'list';
+@import 'article';
 
 body {
-    background: lighten($primary, 41%);
+    background: $background;
     color: $foreground;
 }
 
