--- a/themes/agora/layouts/_default/single.html
+++ b/themes/agora/layouts/_default/single.html
@@ -2,19 +2,13 @@
 	<main>
 		<article>
 			<h1>{{ .Title }}</h1>
-			<time>{{ .Date.Format "02.01.2006 15:04" }}</time>
+			<div class="info">
+				Scritto il <time>{{ .Date.Format "02.01.2006" }}</time>
+				da <span>{{ .Params.Author }}</span>
+			</div>
 			<div>
 				{{ .Content }}
 			</div>
-			{{ with .Params.tags }}
-			<div>
-				<ul id="tags">
-					{{ range . }}
-					<li><a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a></li>
-					{{ end }}
-				</ul>
-			</div>
-			{{ end }}
 			{{ with .Site.DisqusShortname }}
 			<div>
 				{{ template "_internal/disqus.html" . }}
@@ -22,5 +16,4 @@
 			{{ end }}
 		</article>
 	</main>
-{{ partial "sidebar.html" . }}
 {{ end }}
